tests/errors/clock.vir
mod CantIfClock {
    incoming clock : Clock

    // CHECK: Expected Bit but found Clock
    if clock {
    }
}
